--- a/acstheme.htm
+++ b/acstheme.htm
@@ -15,7 +15,7 @@
     <link href="~/Styles/tabnav.css" rel="Stylesheet" type="text/css" />
        <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false"></script>
   
-    script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+   < script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" language="javascript">
  if (!google.maps.Polygon.prototype.getBounds) {
 
