--- a/acstheme.htm
+++ b/acstheme.htm
@@ -13,7 +13,11 @@
 
  <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Styles/tabnav.css" rel="Stylesheet" type="text/css" />
-       <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false"></script>
+    
+	
+	 <script src="https://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAA096IfUDqKmbobcBnp0Nq1BTtsIjPgByl7SnfLmPUqCb6XBC5mRTBPkaCgYq5rIGFomrdQ7GFySBBGg"
+        type="text/javascript"></script>
+
   
    < script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" language="javascript">
