--- a/acstheme.htm
+++ b/acstheme.htm
@@ -15,8 +15,8 @@
     <link href="~/Styles/tabnav.css" rel="Stylesheet" type="text/css" />
     
 	
-	 <script src="https://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAA096IfUDqKmbobcBnp0Nq1BTtsIjPgByl7SnfLmPUqCb6XBC5mRTBPkaCgYq5rIGFomrdQ7GFySBBGg"
-        type="text/javascript"></script>
+	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATibub3owTQlDdDsG6o-ujb0Pk42sKXz0&callback=initMap"
+  type="text/javascript"></script>
 
   
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
