--- a/acstheme.htm
+++ b/acstheme.htm
@@ -11,8 +11,8 @@
 #min700 tbody tr:hover td{color:#009;}
 </style>
 
- <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Styles/tabnav.css" rel="Stylesheet" type="text/css" />
+ <link href="~/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/tabnav.css" rel="Stylesheet" type="text/css" />
     
 	
 	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATibub3owTQlDdDsG6o-ujb0Pk42sKXz0&callback=initMap"
@@ -1408,8 +1408,8 @@ var itot = [];
 		
 				
 </script>
-<script src="Scripts/counties.js" type="text/javascript" ></script>
-<script src="Scripts/tracts2.js" type="text/javascript" ></script>
+<script src="counties.js" type="text/javascript" ></script>
+<script src="tracts2.js" type="text/javascript" ></script>
 </body>
 
 
