--- a/acstheme.htm
+++ b/acstheme.htm
@@ -11,8 +11,8 @@
 #min700 tbody tr:hover td{color:#009;}
 </style>
 
- <link href="~/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/tabnav.css" rel="Stylesheet" type="text/css" />
+ <link href="Site.css" rel="stylesheet" type="text/css" />
+    <link href="tabnav.css" rel="Stylesheet" type="text/css" />
     
 	
 	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATibub3owTQlDdDsG6o-ujb0Pk42sKXz0&callback=initMap"
