--- a/acstheme.htm
+++ b/acstheme.htm
@@ -15,7 +15,7 @@
     <link href="tabnav.css" rel="Stylesheet" type="text/css" />
     
 	
-	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATibub3owTQlDdDsG6o-ujb0Pk42sKXz0&callback=initMap"
+	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATibub3owTQlDdDsG6o-ujb0Pk42sKXz0&"
   type="text/javascript"></script>
 
   
