--- a/acstheme.htm
+++ b/acstheme.htm
@@ -72,7 +72,7 @@ NOTE:Will not work in IE at lower levels of geography due to poor memory managme
   <input type=Button onClick=doTmapBG('pov'); Value="BG Thematic Poverty"><br>
  <input type=Button onClick=clearx(); Value="Clear Choices">
   
-  <script type="text/javascript" src="acstreeNsmall.js"></script>
+  <script type="text/javascript" src="acsTreeNsmall.js"></script>
   
   
 </fieldset>
